syntax = "proto3";

package gkit.service.account.entities.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option java_multiple_files = true;
option java_package = "gkit.service.account.entities.v1";

// User Entity
message User {
  option (validate.disabled) = true;
  google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // primary key
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  google.protobuf.StringValue username = 7;
  string first_name = 8;
  string last_name = 9;
  optional string email = 10 [(tagger.tags) = "avro:\"email\" graphql:\"withNewTags,optional\""];
  gkit.service.account.entities.v1.Profile profile = 11;
}

// Profile Entity
message Profile {
  option (validate.disabled) = true;
  google.protobuf.StringValue id = 1 [(validate.rules).string.uuid = true]; // primary key
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  optional string tz = 5; // *time.Location?
  string avatar = 6;
  enum GenderType {
    GENDER_TYPE_UNSPECIFIED = 0;
    GENDER_TYPE_MALE = 1;
    GENDER_TYPE_FEMALE = 2;
  }
  GenderType gender = 7;
  google.protobuf.Timestamp birthday = 8;
  uint32 age = 9; // synthetic field
  google.protobuf.StringValue preferred_theme = 10;
}
